<resources>
    <string-array name="valoresSpinner">
        <item name="play">Jugada</item>
        <item name="object">Objeto encontrado</item>
        <item name="boss">Jefe derrotado</item>
        <item name="easteregg">Secreto encontrado</item>
        <item name="bug">Error del juego</item>
        <item name="other">Otro</item>
    </string-array>

    <string name="app_name">Trophy em All</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración (WIP)</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Elementos guardados</string>
    <string name="menu_slideshow">Tus publicaciones</string>
    <string name="todo2">TODO</string>
    <string name="username">Username</string>
    <string name="type">Type</string>
    <string name="desc">Desc</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo">TODO</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="todo5">TODO</string>
    <string name="inicio">Inicio</string>
    <string name="elementos_guardados">Elementos guardados</string>
    <string name="tus_publicaciones">Tus publicaciones</string>
    <string name="todo6">TODO</string>
    <string name="en_desarrollo_disculpen_las_molestias">(EN DESARROLLO, DISCULPEN LAS MOLESTIAS)</string>
</resources>